codepkg/objects/Project_Site__c.object
<CustomObject>
    <fields>
        <fullName>If_yes_how_many_feet_above_BFE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, how many feet above BFE?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_how_will_this_be_addressed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(i.e. Extend walls, leave floor as is, elevate garage shell full height along with rest of house, and building new floor and extended walls below)

Reference: 2014 Homeowner&apos;s Guide to Retrofitting (FEMA P-312), 5.1.4</inlineHelpText>
        <label>If yes, how will this be addressed?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_describe__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, please describe.</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_type_of_critical_facility__c</fullName>
        <inlineHelpText>Refer to the State Hazard Mitigation Plan and your Local Hazard Mitigation Plan for further information.  In some cases, the community may determine that wastewater treatment plants, water treatment plants, electrical substations, transportation facilities, and buildings such as schools or community centers are critical or essential for their community.

Reference: https://www.fema.gov/media-library-data/1381404651877-881a2cf70a90ac63b9c067100ffccace/SandyRA2CriticalFacilities_508_FINAL2.pdf</inlineHelpText>
        <label>If yes, type of critical facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hospital/health care facility</fullName>
                </value>
                <value>
                    <fullName>Fire/police station</fullName>
                </value>
                <value>
                    <fullName>Emergency operation center</fullName>
                </value>
                <value>
                    <fullName>Communication and data center</fullName>
                </value>
                <value>
                    <fullName>Essential government building</fullName>
                </value>
                <value>
                    <fullName>Other critical facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_State_designated_Coastal_Zone__c</fullName>
        <inlineHelpText>Reference: 2015 HMA Guidance Addendum, A.2 &amp; A.6</inlineHelpText>
        <label>In State designated Coastal Zone?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_above_500YR_flood_elevation__c</fullName>
        <label>Install above 500YR flood elevation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Vacant Land</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Discarded__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Project Site will be deleted if this flag is true</description>
        <label>Is Discarded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_property_NFIP_insured__c</fullName>
        <label>Is property NFIP insured?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_structure_a_critical_faciltiy__c</fullName>
        <label>Is structure a critical faciltiy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_project_in_a_SFHA__c</fullName>
        <label>Is the project in a SFHA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_an_attached_garage__c</fullName>
        <label>Is there an attached garage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_critical_facility_as_identifie__c</fullName>
        <label>Is this critical facility identified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_historical_structure__c</fullName>
        <label>Is this a historical structure?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_site_identified_as_an_alternate__c</fullName>
        <label>Is this site identified as an alternate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Type__c</fullName>
        <label>Jurisdiction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Special District</fullName>
                </value>
                <value>
                    <fullName>Tribal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Less_than_16_pop_based_on_FEMA_P_320__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Less than 16 pop based on FEMA P-320</label>
        <length>2700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_protection_ie_100_yr_flood__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference: 2015 HMA Guidance, Part IV J.</inlineHelpText>
        <label>Level of protection (ie 100 yr flood)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lot_Square_Footage__c</fullName>
        <label>Lot Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOAs_impacted_landowner_transportation__c</fullName>
        <label>MOAs impacted landowner/transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_testing_intervals__c</fullName>
        <label>Maintenance &amp; testing intervals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Methods_to_fell_and_remove_veg_fuels__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Methods to fell and remove veg/fuels</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Moving_of_at_risk_pop_barriers_to_evac__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Moving of at-risk pop &amp; barriers to evac</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multi_line_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Multi-line field</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NFIP_Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NFIP Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIP_premium_of_5_yrs_included_in_budget__c</fullName>
        <inlineHelpText>Reference: HMA Guidance Addendum A.6.9.4</inlineHelpText>
        <label>NFIP premium of 5-yrs included in budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_and_location_of_flood_source_on_map__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For example : river, coastal, watershed, storm water ponding, locations susceptible to heavy rain, on the applicable FIRM, DFIRM, Preliminary DFIRM, or other map type as appropriate

Reference: 2015 HMA Guidance Addendum, E.3</inlineHelpText>
        <label>Name and location of flood source on map</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Property_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Property Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_area_for_elevated_utility_room__c</fullName>
        <inlineHelpText>Construction of a utility room above the BFE only if there is no existing space within the house for this purpose or there is no alternative cost-effective way to elevate the utilities

Reference: 2015 HMA Guidance Addendum, E.4.2</inlineHelpText>
        <label>New area for elevated utility room?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_deck_porch_required_to_maint_exits__c</fullName>
        <inlineHelpText>Construction of new stairs, landings, and railings to access the elevated living space per minimum code or local ordinance

Reference: 2015 HMA Guidance, E.4.2</inlineHelpText>
        <label>New deck/porch required to maint. exits?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_or_retro_stand_alone_or_internal__c</fullName>
        <label>New or retro, stand alone or internal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New stand-alone</fullName>
                </value>
                <value>
                    <fullName>Retrofit stand-alone</fullName>
                </value>
                <value>
                    <fullName>New internal</fullName>
                </value>
                <value>
                    <fullName>Retrofit internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_structural_elements_to_mitigate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-structural elements to mitigate</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_usable_area_used_to_reduced_sq_ft__c</fullName>
        <label>Non-usable area used to reduced sq ft</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_of_crawlspace_fill_to_outside_grade__c</fullName>
        <inlineHelpText>If not elevated on a crawlspace, indicate &quot;Not applicable&quot;. Reference: 2014 Homeowner&apos;s Guide to Retrofitting (FEMA P-312), 5.0</inlineHelpText>
        <label>Note of crawlspace fill to outside grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_site_storage_signage_in_the_plans__c</fullName>
        <label>On-site storage/signage in the plans</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outside_floodway_or_coastal_high_hazard__c</fullName>
        <label>Outside floodway or coastal high hazard</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Over_48_years_old_has_SHPO_reviewed__c</fullName>
        <label>Over 48 years old, has SHPO reviewed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_plans_addit_l_imprvmnts_same_time__c</fullName>
        <label>Owner plans addit&apos;l imprvmnts same time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_rcvd_FEMA_IA_SBA_or_other_funding__c</fullName>
        <inlineHelpText>Payouts for structural repairs only. No need  to provide payout for contents</inlineHelpText>
        <label>Owner rcvd FEMA IA SBA or other funding?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_rcved_Ins_pmnts_for_damage__c</fullName>
        <inlineHelpText>Payouts for structural repairs only. No need  to provide payout for contents</inlineHelpText>
        <label>Owner rcved Ins pmnts for damage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parcel_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_review_FEMA_P_646_ASCE_7_compliant__c</fullName>
        <label>Peer review FEMA P-646/ASCE 7 compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plan_Point_of_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_mitigation_foundation_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Common foundation types:  
Open foundation including piles , posts or piers
Elevated crawl space
Slab on Grade

Reference: 2015 HMA Guidance Addendum, E.2 &amp; E.4.1</inlineHelpText>
        <label>Post-mitigation foundation type</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Event_or_Current_Market_Value_F__c</fullName>
        <formula>TEXT(Application_Extension__r.Pre_Event_or_Current_Market_Value__c)</formula>
        <label>Pre-Event or Current Market Value F?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Mitigation_First_Floor_Elevation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre-Mitigation First Floor Elevation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_event_value_attach_FEMA_Form_009_3__c</fullName>
        <inlineHelpText>Certification that the property owner is a National of the United States or qualified alien is required only if pre-event market value is being offered for the property. The Declaration and Release form for this certification can be found in the Document Library.

Reference: 2015 HMA Guidance Addendum, A.6.9.2</inlineHelpText>
        <label>Pre-event value, attach FEMA Form 009-3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U.S National</fullName>
                </value>
                <value>
                    <fullName>Qualified alien</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_to_dvlp_strategy_risk_asssment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Process to dvlp strategy, risk asssment</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Site_State__c</fullName>
        <label>Project Site State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type_formula__c</fullName>
        <formula>TEXT(Application__r.Project_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_in_Special_Flood_Hazard_Area__c</fullName>
        <label>Project in Special Flood Hazard Area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_near_historic_structure_48_y_o__c</fullName>
        <label>Project near historic structure (48 y/o)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_site_100YR_or_500YR_flood_plain__c</fullName>
        <label>Project site 100YR or 500YR flood plain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Locator_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Locator Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Tax Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_capacity_of_evac_structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed capacity of evac structure</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_facility_addresses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed facility addresses</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_floodproofing_techniques__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Techniques applied to keep structures dry by sealing the structure to keep floodwaters out. For all dry floodproofing activities, FEMA requires Recipients and subrecipients to design all dry floodproofing projects in accordance with ASCE 24-14. Dry floodproofing is not permitted in the Coastal V Zone.

Reference: 2015 HMA Guidance, Part III, E.1.1.</inlineHelpText>
        <label>Proposed floodproofing techniques</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_historic_treatment_measures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed historic treatment measures</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provide_a_detailed_problem_decription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provide a detailed problem decription</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provide_all_EHP_information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provide all EHP information</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provide_the_name_of_each_flooding_source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference: 2015 HMA Guidance, Part IV H.1</inlineHelpText>
        <label>Provide the name of each flooding source</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prtis_bnfting_from_HFR_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prtis bnfting from HFR Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recognized_FEMA_design_licensed_prof__c</fullName>
        <label>Recognized FEMA design, licensed prof</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repetitive_Loss_Structure__c</fullName>
        <label>Repetitive Loss Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retrofit_of_an_existing_building__c</fullName>
        <inlineHelpText>Reference: 2015 HMA Guidance Addendum, E.2 and 2015 HMA Guidance, Part V A.3</inlineHelpText>
        <label>Retrofit of an existing building?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_by_SHPO__c</fullName>
        <label>Reviewed by SHPO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room_sized_to_population_categories__c</fullName>
        <label>Room sized to population categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFHA_safe_room_at_500YR_flood_or_higher__c</fullName>
        <label>SFHA, safe room at 500YR flood or higher</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safe_Room_design_ADA_compliant__c</fullName>
        <label>Safe Room design ADA compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safe_Room_sized_to_population_at_risk__c</fullName>
        <label>Safe Room sized to population at risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safe_room_period_of_protection__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Safe room period of protection</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Structure__c</fullName>
        <label>Secondary Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Project_Type_Formula__c</fullName>
        <formula>TEXT(Application_Extension__r.Select_Project_Type__c)</formula>
        <label>Select Project Type Formula</label>
        <type>Text</type>
    </fields>
</CustomObject>